APERTA-8247 fix spacing around participant selector

--- a/app/assets/stylesheets/screens/_discussions.scss
+++ b/app/assets/stylesheets/screens/_discussions.scss
@@ -21,11 +21,12 @@
 // Show:
 
 .discussions-show-header {
-  margin-bottom: 30px;
+  margin-bottom: 19px;
 }
 
 .discussions-show-title {
   font-size: 21px;
+  margin-bottom: 23px;
   text-align: center;
 
   input {
